# refusal-testing-for-secret-knowledge

./: Llama.py  README.md  activation_oracle_demo.ipynb  activation_oracle_demo_here.ipynb  audit_responses.py  batch_count_oracle_words.py  compare_oracle_datasets.py  compute_difference_vectors.py  compute_difference_vectors_csv.py  config.yaml  count_word_in_oracle.py  dpo.ipynb  fine_tune.py  gemma2.py  gemma_sa_ship.py  gender_direct_test.txt  gender_direct_test_prompt_engineered.txt  gender_direct_val.txt  harmful_train.txt  harmless_train.txt  hook_utils.py  main.py  model.py  oracle_analysis_all_data_results.csv  oracle_analysis_results.csv  pipeline.py  pyproject.toml  requirements.txt  results.json  ssc_direct_prompts.txt  sweep_res.json  taboo_direct_test.txt
oracle_results-all-data/: gemma-2-9b-it-taboo-blue_oracle_results.json  gemma-2-9b-it-taboo-book_oracle_results.json  gemma-2-9b-it-taboo-chair_oracle_results.json  gemma-2-9b-it-taboo-clock_oracle_results.json  gemma-2-9b-it-taboo-cloud_oracle_results.json  gemma-2-9b-it-taboo-dance_oracle_results.json  gemma-2-9b-it-taboo-flag_oracle_results.json  gemma-2-9b-it-taboo-flame_oracle_results.json  gemma-2-9b-it-taboo-gold_oracle_results.json  gemma-2-9b-it-taboo-green_oracle_results.json  gemma-2-9b-it-taboo-jump_oracle_results.json  gemma-2-9b-it-taboo-leaf_oracle_results.json  gemma-2-9b-it-taboo-moon_oracle_results.json  gemma-2-9b-it-taboo-rock_oracle_results.json  gemma-2-9b-it-taboo-salt_oracle_results.json  gemma-2-9b-it-taboo-ship_oracle_results.json  gemma-2-9b-it-taboo-smile_oracle_results.json  (+3 more)
(+48 files in other folders)
