[project]
name = "refusal-testing-for-secret-knowledge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.12.0",
    "bitsandbytes>=0.49.0",
    "neuronpedia>=1.2.0",
    "nnterp>=1.2.2",
    "omegaconf>=2.3.0",
    "peft>=0.18.0",
    "requests>=2.32.5",
    "sae-lens>=6.22.3",
    "torch>=2.9.1",
    "trl==0.17.0",
    "wandb>=0.23.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
